--- a/src/some_proto/frontend/app.css
+++ b/src/some_proto/frontend/app.css
@@ -13,3 +13,20 @@
         @apply text-lg;
     }
 }
+
+.hn-row-bg-animate {
+    background-size: 300%;
+    -webkit-animation: hn-row-bg-animation 3s ease infinite;
+    -moz-animation: hn-row-bg-animation 3s ease infinite;
+    animation: hn-row-bg-animation 3s ease infinite;
+}
+
+@keyframes hn-row-bg-animation {
+    0%,
+    100% {
+        background-position: left;
+    }
+    50% {
+        background-position: right;
+    }
+}
